[package]
name = "gcra"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of the Generic Cell Rate Algorithm (GCRA) for rate limiting"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/gcra"
homepage = "https://github.com/yourusername/gcra"
documentation = "https://docs.rs/gcra"
readme = "README.md"
keywords = ["rate-limiting", "gcra", "throttling", "token-bucket", "leaky-bucket", "traffic-shaping"]
categories = ["algorithms", "network-programming", "web-programming"]
rust-version = "1.70"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "rate_limiter"
harness = false

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
